Added App Gateway v2 config change.

--- a/aadpodidentitybinding.yaml
+++ b/aadpodidentitybinding.yaml
@@ -3,5 +3,5 @@ kind: AzureIdentityBinding
 metadata:
  name: wr-identity-binding
 spec:
- AzureIdentity: wr
+ AzureIdentity: wridentity
  Selector: wraadbindingselector
